# git-jump

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  lefthook.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  usage.md
shell/: gj.bash  gj.fish  gj.zsh
src/: browse.rs  clone.rs  completions.rs  config.rs  debug.rs  error.rs  filter.rs  jump.rs  main.rs  project.rs  resolve.rs  score.rs  select.rs  setup.rs  shell.rs
tests/: alias_test.rs  browse_test.rs  cli_basic_test.rs  clone_test.rs  completions_test.rs  debug_test.rs  dot_jump_test.rs  init_test.rs  jump_test.rs  logo_test.rs  scoring_test.rs
tests/common/: mod.rs
